Design for mobile
I'm following the mobile first design pattern here.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,103 @@
 	<link rel="stylesheet" type="text/css" href="./main.css">
 </head>
 <body>
-
+	<div id="wrapper">
+		<section class="unit">
+			<article class="pin">
+				<div class="cover" style="background:url(http://i.imgur.com/uy0QhFB.gif)"></div>
+				<div class="comment">
+					<div>
+						<span>Is this it? Is this what we are doing now? God damn it you guys</span>
+					</div>
+				</div>
+				<div class="profile">
+					<div>
+						<a href="https://twitter.com/captn3m0" target="_blank">
+							<span>
+								<img class="profile_pic" src="https://pbs.twimg.com/profile_images/680295711653535744/yrHCrBde_bigger.png" width="48px" height="48px" />
+							</span>
+							<span>Nemo</span>
+						</a>
+					</div>
+				</div>
+			</article>
+			<article class="ad" style="background:url(http://i.imgur.com/WSS9wNj.jpg)">
+				<div> <!-- This would act as overlay -->
+					<a  class="button" href="#" target="_blank">DIY</a>
+				</div>
+			</article>
+			<article class="pin">
+				<div class="cover" style="background:url(http://i.imgur.com/yag6nN9.jpg)"></div>
+				<div class="comment">
+					<div>
+						<span>Friend of a friend is an artist. Found this both hilarious and brilliant.</span>
+					</div>
+				</div>
+				<div class="profile">
+					<div>
+						<a href="https://twitter.com/leostatic" target="_blank">
+							<span>
+								<img class="profile_pic" src="https://pbs.twimg.com/profile_images/570075468368334848/Q20gAPSk_bigger.jpeg" width="48px" height="48px" />
+							</span>
+							<span>Shashank Mehta</span>
+						</a>
+					</div>
+				</div>
+			</article>
+			<article class="ad" style="background:url(http://i.imgur.com/Js85Mt9.jpg)">
+				<div>
+					<a class="button" href="#" target="_blank">Order Tasty Noodles!</a>
+				</div>
+			</article>
+		</section>
+		<section class="unit">
+			<article class="pin">
+				<div class="cover" style="background:url(http://i.imgur.com/uy0QhFB.gif)"></div>
+				<div class="comment">
+					<div>
+						<span>Is this it? Is this what we are doing now? God damn it you guys</span>
+					</div>
+				</div>
+				<div class="profile">
+					<div>
+						<a href="https://twitter.com/captn3m0" target="_blank">
+							<span>
+								<img class="profile_pic" src="https://pbs.twimg.com/profile_images/680295711653535744/yrHCrBde_bigger.png" width="48px" height="48px" />
+							</span>
+							<span>Nemo</span>
+						</a>
+					</div>
+				</div>
+			</article>
+			<article class="ad" style="background:url(http://i.imgur.com/WSS9wNj.jpg)">
+				<div> <!-- This would act as overlay -->
+					<a  class="button" href="#" target="_blank">DIY</a>
+				</div>
+			</article>
+			<article class="pin">
+				<div class="cover" style="background:url(http://i.imgur.com/yag6nN9.jpg)"></div>
+				<div class="comment">
+					<div>
+						<span>Friend of a friend is an artist. Found this both hilarious and brilliant.</span>
+					</div>
+				</div>
+				<div class="profile">
+					<div>
+						<a href="https://twitter.com/leostatic" target="_blank">
+							<span>
+								<img class="profile_pic" src="https://pbs.twimg.com/profile_images/570075468368334848/Q20gAPSk_bigger.jpeg" width="48px" height="48px" />
+							</span>
+							<span>Shashank Mehta</span>
+						</a>
+					</div>
+				</div>
+			</article>
+			<article class="ad" style="background:url(http://i.imgur.com/Js85Mt9.jpg)">
+				<div>
+					<a class="button" href="#" target="_blank">Order Tasty Noodles!</a>
+				</div>
+			</article>
+		</section>
+	</div>
 </body>
 </html>
